# MetodyNumeryczne

./: CMakeLists.txt  Makefile  README.md
examples/: example_interpolation.cpp
include/: approximation.h  integration.h  nonlinear_equations.h  utilities.h
numerical_lib/examples/: example_interpolation.cpp  example_linear_systems.cpp
numerical_lib/include/: differential_equations.h  interpolation.h  linear_systems.h  numerical_lib.h  utilities.h
numerical_lib/src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_systems.cpp  nonlinear_equations.cpp  utilities.cpp
numerical_lib/tests/: test_approximation.cpp  test_differential_equations.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_systems.cpp  test_nonlinear_equations.cpp  test_utilities.cpp
